--- a/style/sidebar.scss
+++ b/style/sidebar.scss
@@ -10,6 +10,7 @@
         margin: 0 0 20px -20px;
         padding: 5px 0 10px 20px;
         position: relative;
+        height: 50px;
 
         h3 {
             margin-top: 10px;
