--- a/style/sidebar.scss
+++ b/style/sidebar.scss
@@ -11,6 +11,7 @@
         padding: 5px 0 10px 20px;
         position: relative;
         height: 50px;
+        box-sizing: border-box;
 
         h3 {
             margin-top: 10px;
